--- a/BasicWebSocketTest.uproject
+++ b/BasicWebSocketTest.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.16",
+	"EngineAssociation": "{E1E458C6-4843-2149-3D26-58A684810EF3}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -8,6 +8,28 @@
 			"Name": "BasicWebSocketTest",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "GearVR",
+			"Enabled": false
+		},
+		{
+			"Name": "SteamVR",
+			"Enabled": false
+		},
+		{
+			"Name": "OculusInput",
+			"Enabled": false
+		},
+		{
+			"Name": "OculusLibrary",
+			"Enabled": false
+		},
+		{
+			"Name": "OculusRift",
+			"Enabled": false
 		}
 	]
 }
